Add JDK 25 performance runtime profile
Signed-off-by: Keshava Munegowda <keshava.gowda@gmail.com>